# ContentOS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
docker/: Dockerfile.agent  Dockerfile.ai-gateway  Dockerfile.gateway  Dockerfile.piper  Dockerfile.whisper  Dockerfile.workflow  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.scale.yml  docker-compose.yml
docs/: AB_TESTING.md  ADR.md  AGENTS.md  AI_DIRECTOR.md  AI_GATEWAY.md  ANALYTICS_AI.md  API.md  API_KEYS.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  ASSET_MANAGER_V2.md  AUTONOMOUS_CREATOR_OS_AUDIT.md  AUTONOMOUS_CREATOR_OS_PHASE_MAP.md  AUTOPILOT_CONTRACT.md  BILLING.md  CACHE_MANAGER.md  CI_CD.md  COMMAND_CENTER.md  COMMENT_ANALYZER.md  COMMUNITY_AGENT.md  CONTENT_FACTORY.md  CONTENT_GRAPH.md  CONTENT_SCORE.md  CONTENT_SOURCES.md  CORRECOES_MELHORIAS_MAPA.md  COST_MANAGER.md  CREATIVE_MEMORY.md  DEPLOY_STAGING.md  EDITOR.md  EVENT_BUS.md  EXECUTIVE_DASHBOARD.md  FACTORY_MAP.md  FACTORY_TRUTH_TABLE.md  FINAL_READINESS_REPORT.md  FLOW.md  GAP_ANALYSIS.md  GRAFANA.md  GROWTH_AI.md  GROWTH_AI_GAP_ANALYSIS.md  GROWTH_OPS.md  (+53 more)
scripts/: backfill_publication_audit.py  check_content_sources.py  check_growth_readiness.py  deploy_staging.ps1  e2e_growth.py  e2e_pipeline.py  generate_factory_truth_table.py  seed.py  wait_for_services.py
tests/: conftest.py  test_ab_testing.py  test_advanced_providers.py  test_agents.py  test_ai_director.py  test_ai_gateway.py  test_ai_gateway_routing.py  test_analytics_ai.py  test_api_integration.py  test_api_keys.py  test_asset_pipeline.py  (+138 more)
(+291 files in other folders)
